vagrant/k8s/minikube/yaml/postgres/07-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: local-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 5432
      name: tcp
      protocol: TCP
    hosts:
    - "*"
